# seminar-kit

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.zed/: tasks.json
backend/app/: main.py
backend/app/core/: config.py  db.py  errors.py
backend/app/models/: __init__.py  application.py  attendee.py  base.py  category.py  company.py  course.py  mail.py  staff.py
backend/app/routers/: courses.py  deps.py  docs.py  qr.py
backend/app/schemas/: __init__.py  course.py
backend/app/services/: forms.py  ledger.py  mail.py  mailin.py  no.py  parse.py  qr.py  regist.py  roster.py  sitegen.py
backend/tests/: conftest.py  test_api.py  test_db_e2e.py  test_forms.py  test_mailin.py  test_models.py  test_no.py  test_office_views.py  test_regist.py  test_reports.py  test_sitegen.py
db/: schema.sql
deploy/: Caddyfile  README.md  backup.sh  form-macro.js  操作手順書.md
deploy/systemd/: seminar-api.service  seminar-mailin.service  seminar-office.service
docs/: 01_requirements.md  02_api.md  03_apps.md  04_infra.md  05_ai.md  06_light.md  07_m365.md  08_giteki.md
office/: auth.py  main.py  queries.py  views.py
site/: build.py
site/static/: style.css
site/templates/: apply.html  archive.html  base.html  course.html  index.html
