[project]
name = "seminar"
version = "0.1.0"
description = "研修・セミナー管理システム"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2",
    "pydantic-settings>=2",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "segno>=1.6",
    "flet>=0.80",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pgserver",  # テスト用の組み込み PostgreSQL(sudo 不要)
    "httpx",  # FastAPI TestClient
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# backend/app を import 名 `app` で公開する(office/・site/ からも同じ名で import)。
# office/ も パッケージとして公開する(flet run office/main.py)
[tool.setuptools.packages.find]
where = ["backend", "."]
include = ["app*", "office*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "db: PostgreSQL の結合テスト(TEST_DB_URL または組み込み pgserver で実行)",
]
